# data-algebra-helpers

./: .gitignore  CHANGELOG.md  README.md  algebra-helpers.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.1/: algebra-helpers-0.1.0.0-inplace.conf  package.cache
src/Data/Algebra/: Helpers.hs
test/: Main.hs
