cabal-version:      3.0
name:               algebra-helpers

version:            0.1.0.0

synopsis:           Helper functions for project "school algebra" 
license:            BSD-3-Clause
license-file:       LICENSE
author:             stratis-vip
maintainer:         stratis.vip@gmail.com
category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  Data.Algebra.Helpers

    build-depends:    base ^>=4.20.0.0
                      , process
                      , hspec

    hs-source-dirs:   src

    default-language: Haskell2010

test-suite algebra-helpers-test
    import:           warnings

    default-language: Haskell2010

    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.20.0.0,
        algebra-helpers,
        hspec
